# EclataxEngine

./: .gitignore  CMakeLists.txt  Doxyfile  EclataxEngine  README.md  build.sh  conanfile.txt  create_component.sh  ecl-project-manager  main.cpp  rfc_R-Type_draft.txt  run.sh  template  template_test
APCPPLib/: .gitignore  CMakeLists.txt
APCPPLib/include/: macro.hpp
APCPPLib/lib/src/Benchmarking/: Breakpoint.cpp
APCPPLib/lib/src/Exception/: ConfigFileException.hpp  MissingFileException.hpp
APCPPLib/lib/src/Log/: Logger.cpp  Logger.hpp
APCPPLib/lib/src/Maths/: Triangles.cpp  Triangles.hpp  Vector.hpp
APCPPLib/lib/src/Utils/: LibraryLoader.cpp  LibraryLoader.hpp  Tuples.hpp
APCPPLib/tests/: IDisplayModule.hpp  SFML.cpp  SFML.hpp
APCPPLib/tests/Log/: test_logger.cpp
APCPPLib/tests/Maths/: test_triangles.cpp
APCPPLib/tests/Utils/: test_tuples.cpp
component_creation/: create_component.sh  template  template_test
deprecated/: ConfReader.cpp  ConfReader.hpp  Hub.cpp  RFC_R-Type.txt
deprecated/client/: EntityClient.cpp  TcpConnection.cpp  TcpConnection.hpp  UdpConnection.cpp  UdpConnection.hpp  main.cpp
deprecated/game/entities/: Asteroid.hpp  BeeEntrypoint.cpp  BeeSwarm.cpp  Fleet.hpp  IEnnemy.hpp  Parallax.hpp  Player.cpp  Ship.cpp
deprecated/game/scenes/: HubLoadingScene.cpp  Level1Scene.cpp  Level2Scene.cpp  Level2Scene.hpp  SplashScene.cpp
deprecated/network/: Rfc.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpNetwork.cpp  UdpNetwork.cpp  UdpNetwork.hpp
deprecated/tests/Benchmarking/: test_breakpoints.cpp
include/: macro.hpp
lib/src/Benchmarking/: Breakpoint.cpp  Breakpoint.hpp
lib/src/Exception/: ConfigFileException.cpp  Exception.cpp  Exception.hpp  MissingFileException.cpp  TcpSocketException.cpp  TcpSocketException.hpp
lib/src/Log/: Logger.cpp  Logger.hpp
ressources/: .conf  r-type-event.conf  rtype.conf
ressources/tests/: .conf
server/: CMakeLists.txt  UdpNetwork.cpp  main.cpp
src/: ConfReader.cpp  ConfWriter.cpp  ConfWriter.hpp  Hub.cpp  Hub.hpp  IModules.hpp  Mediator.cpp  Mediator.hpp  main.cpp
src/Lua/: LuaFunction.cpp  LuaFunction.hpp  build.sh  example.lua  main.cpp
src/Utils/: Log.cpp  Log.hpp
src/client/: ClientMediator.cpp  ClientMediator.hpp  ConfReader.cpp  ConfReader.hpp  ConfWriter.cpp  ConfWriter.hpp  EntityClient.cpp  EntityClient.hpp  GraphicalModule.cpp  GraphicalModule.hpp  TcpConnection.cpp  TcpConnection.hpp  UdpConnection.cpp  UdpConnection.hpp  main.cpp  menu.cpp  menu.hpp
src/ecs/: ECS.cpp  ECS.hpp
src/ecs/components/: IComponent.hpp
src/ecs/entities/: Entity.cpp  Entity.hpp
src/ecs/systems/: ISystem.hpp  MovementSystem.hpp
src/engine/: Color.cpp  Color.hpp  DLLoader.cpp  DLLoader.hpp  GameEngine.cpp  GameEngine.hpp  IModule.hpp  LibraryLoader.cpp  LibraryLoader.hpp  Rect.hpp  Vector.hpp  WinDLLoader.cpp  WinDLLoader.h  WinDLLoader.hpp
src/engine/ecs/: ECS.cpp  ECS.hpp
src/engine/ecs/components/: AccelerationComponent.hpp  Animation2DComponent.hpp  AudioComponent.hpp  CollisionBox2DComponent.hpp  CollisionBoxComponent.hpp  DamageComponent.hpp  HealthComponent.hpp  IComponent.hpp  LifeComponent.hpp  LifeSpanComponent.hpp  ParticulesComponent.hpp  ScriptComponent.hpp  SpawnerComponent.hpp  SpeedComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  TransformComponent.hpp
src/engine/ecs/entities/: Entity.cpp  Entity.hpp  EntityFactory.cpp  EntityFactory.hpp
src/engine/ecs/systems/: AnimationSystem.cpp  AnimationSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  HealthManipulatorSystem.cpp  HealthManipulatorSystem.hpp  IASystem.cpp  IASystem.hpp  ISystem.hpp  LifeSpanSystem.cpp  LifeSpanSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SpawnerSystem.cpp  SpawnerSystem.hpp  TextSystem.cpp  TextSystem.hpp
src/engine/graphicalAPI/: GraphicalModule.cpp  GraphicalModule.hpp  IGraphicalAPI.hpp
src/engine/graphicalAPI/SFML/: ECLSFML.cpp  ECLSFML.hpp
src/engine/scenesManagement/: IScene.hpp
src/engine/scenesManagement/sceneMachine/: SceneMachine.cpp  SceneMachine.hpp  SceneStateMachine.cpp  SceneStateMachine.hpp
src/engine/scenesManagement/scenes/: AScene.cpp  AScene.hpp  DumyScene.cpp  DumyScene.hpp  IScene.hpp  MainScene.cpp  MainScene.hpp
src/game/: MobGenerator.cpp  MobGenerator.hpp
src/game/entities/: Asteroid.cpp  Asteroid.hpp  Bee.cpp  Bee.hpp  BeeSwarm.cpp  BeeSwarm.hpp  Ennemy.cpp  Ennemy.hpp  Fleet.cpp  Fleet.hpp  IEnnemy.hpp  Parallax.cpp  Parallax.hpp  Parallax2.cpp  Parallax2.hpp  Player.cpp  Player.hpp  Ship.cpp  Ship.hpp  ShipEntryPoint.cpp
src/game/scenes/: AScene.cpp  AScene.hpp  HubLoadingScene.cpp  HubLoadingScene.hpp  Level1Scene.cpp  Level1Scene.hpp  Level2Scene.cpp  Level2Scene.hpp  SplashScene.cpp  SplashScene.hpp
src/network/: Rfc.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpNetwork.cpp  TcpNetwork.hpp  UdpNetwork.cpp  UdpNetwork.hpp
src/server/: TcpConnection.cpp  TcpConnection.hpp  TcpNetwork.cpp  TcpNetwork.hpp  UdpNetwork.cpp  UdpNetwork.hpp
tests/: main.cpp
tests/Exception/: test_exception.cpp
tests/Game/: test_hub.cpp
tests/Log/: test_logger.cpp
tests/client/: test_EntityClient.cpp
tests/component/: test_Acceleration.cpp  test_Animation.cpp  test_Damage.cpp  test_Life.cpp  test_LifeSpan.cpp  test_Particules.cpp  test_Script.cpp  test_Spawner.cpp  test_Speed.cpp  test_Sprite.cpp  test_Text.cpp  test_collisionBox.cpp  test_health.cpp  test_script.cpp  test_sprite.cpp  test_text.cpp
tests/configfile/: config_test.cpp
tests/ecs/: test_ecs.cpp
tests/engine/: test_gameEngine.cpp
tests/entity/: test_entity.cpp  test_entityFactory.cpp
tests/network/: test_tcp.cpp
tests/sceneMachine/: test_sceneMachine.cpp
tests/scenes/: test_dummyScene.cpp
tests/systems/: test_Animation.cpp  test_Collision.cpp  test_HealthManipulator.cpp  test_IA.cpp  test_MovementSystem.cpp  test_Render.cpp  test_collision.cpp
